--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Shashwat Mishra – AI Engineer Portfolio</title>
+    <meta name="description" content="Portfolio website of Shashwat Mishra, AI Engineer. Explore projects, skills, services, and contact information." />
     <!-- Google Fonts: Inter and Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet" />
   </head>
