--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shashwat Mishra – AI Engineer Portfolio</title>
+    <title><img src="/logo.svg" alt="Logo" style="width:1em;vertical-align:middle;"> Shashwat Mishra – AI Engineer Portfolio</title>
     <meta name="description" content="Portfolio website of Shashwat Mishra, AI Engineer. Explore projects, skills, services, and contact information." />
     <!-- Google Fonts: Inter and Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet" />
