--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon_io/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon_io/favicon-16x16.png" />
     <link rel="manifest" href="/src/assets/favicon_io/site.webmanifest" />
+    <!-- High-DPI favicons for clearer tab icons -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/src/assets/favicon_io/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/src/assets/favicon_io/android-chrome-512x512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shashwat Mishra – AI Engineer Portfolio</title>
     <meta name="description" content="Portfolio website of Shashwat Mishra, AI Engineer. Explore projects, skills, services, and contact information." />
