--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- High-DPI favicons for clearer tab icons -->
     <link rel="icon" type="image/png" sizes="192x192" href="/src/assets/favicon_io/android-chrome-192x192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="/src/assets/favicon_io/android-chrome-512x512.png" />
+    <!-- Multi-resolution ICO for crisp favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="16x16 32x32 48x48" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shashwat Mishra – AI Engineer Portfolio</title>
     <meta name="description" content="Portfolio website of Shashwat Mishra, AI Engineer. Explore projects, skills, services, and contact information." />
